[package]
name = "rufile"
authors = ["lachaka"]
description = """
Terminal file manager
"""
repository = "https://github.com/lachaka/rufile"
readme = "README.md"
license = "MIT"
version = "0.2.0"
edition = "2021"


[dependencies]
tui = "0.19.0"
termion = "2.0.1"
filemagic = "0.12.3"
chrono = "0.4.23"
humansize = "2.1.2"